# joao

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
joao/: __init__.py  __main__.py  agent.py  async_agent.py  debug.py  tools.py
qchat/: __init__.py  agent.py
samples/: asterix.py  auto_update_example.py  batman.py  snoopy.py  web_search.py
tests/: conftest.py  test_agent.py  test_tools.py
tools/: release.sh
